--- a/src/app/components/ProxyList/index.css
+++ b/src/app/components/ProxyList/index.css
@@ -1,3 +1,7 @@
+.proxy {
+  height: 3rem;
+}
+
 .proxy-group {
   padding-left: 1rem;
 }
